tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-daaf8c0f.ts
export async function fn_daaf8c0f(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
